p2/confs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inception-of-things-p2
spec:
  rules:
  - host: app1.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app1
            port:
              number: 80
  - host: app2.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app2
            port:
              number: 80
  - host: app3.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app3
            port:
              number: 80
  - http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: app3
              port:
                number: 80
